; ModuleID = '/home/carl/AnghaBench/netdata/collectors/statsd.plugin/extr_statsd.c_statsd_parse_sampling_rate.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/statsd.plugin/extr_statsd.c_statsd_parse_sampling_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i8*)* @statsd_parse_sampling_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @statsd_parse_sampling_rate(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca double, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call double @statsd_parse_float(i8* %4, double 1.000000e+00)
  store double %5, double* %3, align 8
  %6 = load double, double* %3, align 8
  %7 = call i32 @isless(double %6, double 1.000000e-03)
  %8 = call i64 @unlikely(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store double 1.000000e-03, double* %3, align 8
  br label %11

11:                                               ; preds = %10, %1
  %12 = load double, double* %3, align 8
  %13 = call i32 @isgreater(double %12, double 1.000000e+00)
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store double 1.000000e+00, double* %3, align 8
  br label %17

17:                                               ; preds = %16, %11
  %18 = load double, double* %3, align 8
  ret double %18
}

declare dso_local double @statsd_parse_float(i8*, double) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @isless(double, double) #1

declare dso_local i32 @isgreater(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
